Mobile menu and navbar done

--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,16 @@
 
 @layer base {
   html {
-    @apply overflow-x-hidden scroll-pt-7 scroll-smooth;
+    @apply !overflow-x-hidden scroll-pt-7 scroll-smooth;
   }
   body {
     @apply font-onest font-normal  tracking-tight;
+  }
+}
+
+@layer components {
+  .text-active {
+    @apply font-bold text-textblackcolor;
   }
 }
 
@@ -16,4 +22,8 @@
   .btn-border {
     border: 1px solid #e4e4e7;
   }
+
+ 
 }
+
+
