--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,17 @@
 
 @layer base {
   html {
-    @apply !overflow-x-hidden scroll-pt-7 scroll-smooth ;
+    @apply !overflow-x-hidden scroll-pt-7 scroll-smooth;
   }
   body {
-    @apply font-onest font-normal bg-white dark:bg-darkbgcolor ;
+    @apply font-onest font-normal bg-white dark:bg-darkbgcolor;
   }
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     @apply dark:text-darktextdipcolor;
   }
 }
@@ -25,6 +30,9 @@
   .btn-border {
     border: 1px solid #e4e4e7;
   }
+  .close-shadow {
+    box-shadow: 0px 4px 48px 0px #0000000f;
+  }
   /* @media (max-width: 375px) {
     html{
       font-size: 50%;
@@ -32,5 +40,3 @@
   }
   */
 }
-
-
